flux/apps/music-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
  namespace: default
spec:
  selector:
    app: music-assistant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8095
