flux/apps/music-assistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: music-assistant
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`music.home`)
      kind: Rule
      services:
        - name: music-assistant
          port: 80
    - match: Host(`music.arlodev.co.uk`)
      kind: Rule
      services:
        - name: music-assistant
          port: 80
